deployment/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-staging
spec:
  selector:
    matchLabels:
      app: warehouse
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: warehouse
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/warehouse:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
        command: ["gunicorn", "-c", "gunicorn.py", "warehouse.wsgi:app"]
